<resources>
    <string name="app_name">AndroidApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="Genres">Action, Adventure, Fantasy</string>
    <string name="Avengers_name">Avengers: End Game</string>
    <string name="_13">13+</string>
    <string name="storyline">Storyline</string>
    <string name="Avengers_Description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos` actions and restore balance to the universe</string>
    <string name="cast">Cast</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="_137_min">137 MIN</string>
</resources>