<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FragmentMoviesDetails">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orig" />

    <TextView
        android:id="@+id/textViewCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/cast"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

    <TextView
        android:id="@+id/textViewStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/storyline"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewFullStar1" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:text="@string/Avengers_Description"
        android:textColor="@color/grey"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStory" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/_13"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/textViewName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:text="@string/Avengers_name"
        android:textColor="@color/white"
        android:textSize="@dimen/NameSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBack" />

    <TextView
        android:id="@+id/textViewGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/Genres"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/back_start"
        android:text="@string/back"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imageViewStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:paddingTop="@dimen/dp4"
        app:layout_constraintStart_toStartOf="@id/imageViewFullStar4"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres"
        app:srcCompat="@drawable/empty_star" />

    <ImageView
        android:id="@+id/imageViewFullStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:paddingTop="@dimen/dp4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres"
        app:srcCompat="@drawable/full_star" />

    <ImageView
        android:id="@+id/imageViewFullStar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:paddingTop="@dimen/dp4"
        app:layout_constraintStart_toStartOf="@id/imageViewFullStar1"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres"
        app:srcCompat="@drawable/full_star" />

    <ImageView
        android:id="@+id/imageViewFullStar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:paddingTop="@dimen/dp4"
        app:layout_constraintStart_toStartOf="@id/imageViewFullStar2"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres"
        app:srcCompat="@drawable/full_star" />

    <ImageView
        android:id="@+id/imageViewFullStar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:paddingTop="@dimen/dp4"
        app:layout_constraintStart_toStartOf="@id/imageViewFullStar3"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres"
        app:srcCompat="@drawable/full_star" />

    <TextView
        android:id="@+id/textViewReviews"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/_125_reviews"
        android:textColor="@color/grey"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageViewStar1"
        app:layout_constraintTop_toBottomOf="@id/textViewGenres" />

    <ImageView
        android:id="@+id/imageViewActor1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCast"
        app:srcCompat="@drawable/actor1" />

    <ImageView
        android:id="@+id/imageViewActor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintLeft_toRightOf="@id/imageViewActor3"
        app:layout_constraintTop_toBottomOf="@id/textViewCast"
        app:srcCompat="@drawable/actor4" />

    <ImageView
        android:id="@+id/imageViewActor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintLeft_toRightOf="@id/imageViewActor2"
        app:layout_constraintTop_toBottomOf="@id/textViewCast"
        app:srcCompat="@drawable/actor3" />

    <ImageView
        android:id="@+id/imageViewActor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintLeft_toRightOf="@id/imageViewActor1"
        app:layout_constraintTop_toBottomOf="@id/textViewCast"
        app:srcCompat="@drawable/actor2" />

    <TextView
        android:id="@+id/textViewActor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/robert_downey_jr"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageViewActor1"
        app:layout_constraintStart_toStartOf="@id/imageViewActor1"
        app:layout_constraintTop_toBottomOf="@id/imageViewActor1" />

    <TextView
        android:id="@+id/textViewActor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_evans"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageViewActor2"
        app:layout_constraintStart_toStartOf="@id/imageViewActor2"
        app:layout_constraintTop_toBottomOf="@id/imageViewActor2" />

    <TextView
        android:id="@+id/textViewActor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mark_ruffalo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageViewActor3"
        app:layout_constraintStart_toStartOf="@id/imageViewActor3"
        app:layout_constraintTop_toBottomOf="@id/imageViewActor3" />

    <TextView
        android:id="@+id/textViewActor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_hemsworth"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageViewActor4"
        app:layout_constraintStart_toStartOf="@id/imageViewActor4"
        app:layout_constraintTop_toBottomOf="@id/imageViewActor4" />

</androidx.constraintlayout.widget.ConstraintLayout>